--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}\\app.js",
+            "program": "${workspaceFolder}/app.js",
             "runtimeArgs": [
                 "-r",
                 "dotenv/config"
